--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,8 @@
          Learn how to configure a non-root public URL by running `npm run build`.
        -->
     <title>DonorBuddy - Donate to Non-Profits a Little at a Time</title>
+
+    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
   </head>
   <body>
     <div id="root"></div>
